# msync

./: .gitignore  README.md  pyproject.toml  sync.lst  te.py  testing.py  ypsync.py
msync/: __init__.py  db.py  ffstack.py  stream.py  sync.py  utils.py
msync/cli/: ffmpeg.py  main.py  playlists.py
msync/youtube/: downloader.py  fetch.py
