[tool.poetry]
name = "msync"
version = "0.1.0a"
description = "Music Manager for *nix systems"
authors = ["Harsh Sharma <goharsh007@gmail.com>"]
license = "GPL-3.0-only"
readme = "README.md"
packages = [
  { include = "msync" },
]

[tool.poetry.scripts]
msync = "msync.cli.main:cli"

[tool.poetry.dependencies]
python = "^3.10"
youtube-title-parse = "^1.0.0"
ffmpeg-python = "^0.2.0"
yt-dlp = "^2023.7.6"
mutagen = "^1.46.0"
tqdm = "^4.66.1"
requests = "^2.31.0"
click = "^8.1.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
